Added Jackson JSON Mapper.

--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,8 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <org.springframeworkVersion>3.1.2.RELEASE</org.springframeworkVersion>
+        <version.springframework>3.1.2.RELEASE</version.springframework>
+        <version.jackson>2.0.4</version.jackson>
     </properties>
 
     <repositories>
@@ -37,12 +38,12 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
-            <version>${org.springframeworkVersion}</version>
+            <version>${version.springframework}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-jdbc</artifactId>
-            <version>${org.springframeworkVersion}</version>
+            <version>${version.springframework}</version>
         </dependency>
         <dependency>
             <groupId>commons-dbcp</groupId>
@@ -53,6 +54,22 @@
             <groupId>cglib</groupId>
             <artifactId>cglib</artifactId>
             <version>2.2.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>${version.jackson}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>${version.jackson}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${version.jackson}</version>
         </dependency>
 
         <dependency>
