--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
     </properties>
 
     <repositories>
+
         <repository>
             <id>repository.springsource.release</id>
             <name>SpringSource GA Repository</name>
@@ -27,6 +28,17 @@
             <releases><enabled>true</enabled></releases>
             <snapshots><enabled>false</enabled></snapshots>
         </repository>
+
+        <repository>
+            <id>repository.sonatype.snapshots</id>
+            <name>Sonatype Snapshots</name>
+            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+            <snapshots>
+                <enabled>true</enabled>
+                <updatePolicy>never</updatePolicy>
+            </snapshots>
+        </repository>
+
     </repositories>
 
     <dependencies>
@@ -79,6 +91,17 @@
             <groupId>postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <version>9.1-901-1.jdbc4</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.spullara.mustache.java</groupId>
+            <artifactId>compiler</artifactId>
+            <version>0.8.3</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.ericdwhite</groupId>
+            <artifactId>mustache.java-spring-webmvc</artifactId>
+            <version>0.9.2-SNAPSHOT</version>
         </dependency>
 
     </dependencies>
