--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -29,7 +29,7 @@
     </servlet>
     
     <welcome-file-list>
-        <welcome-file>index.html</welcome-file>
+        <welcome-file />
     </welcome-file-list>
 
 </web-app>
