--- a/pom.xml
+++ b/pom.xml
@@ -109,7 +109,11 @@
             <artifactId>mustache.java-spring-webmvc</artifactId>
             <version>0.9.2-SNAPSHOT</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.apache.servicemix.bundles</groupId>
+            <artifactId>org.apache.servicemix.bundles.commons-validator</artifactId>
+            <version>1.3.1_2</version>
+        </dependency>
     </dependencies>
 
     <build>
