--- a/pom.xml
+++ b/pom.xml
@@ -109,11 +109,20 @@
             <artifactId>mustache.java-spring-webmvc</artifactId>
             <version>0.9.2-SNAPSHOT</version>
         </dependency>
+
+        <!-- apache commons validator has an unspecified dependency on oro,
+             we add it manually here -->
         <dependency>
             <groupId>org.apache.servicemix.bundles</groupId>
             <artifactId>org.apache.servicemix.bundles.commons-validator</artifactId>
             <version>1.3.1_2</version>
         </dependency>
+        <dependency>
+            <groupId>oro</groupId>
+            <artifactId>oro</artifactId>
+            <version>2.0.8</version>
+        </dependency>
+
     </dependencies>
 
     <build>
