--- a/pom.xml
+++ b/pom.xml
@@ -110,7 +110,7 @@
             <version>0.9.2-SNAPSHOT</version>
         </dependency>
 
-        <!-- apache commons validator has an unspecified dependency on oro,
+        <!-- apache commons service has an unspecified dependency on oro,
              we add it manually here -->
         <dependency>
             <groupId>org.apache.servicemix.bundles</groupId>
