--- a/api-server-spring/pom.xml
+++ b/api-server-spring/pom.xml
@@ -123,6 +123,12 @@
             <version>2.0.8</version>
         </dependency>
 
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
