add steps to create https ssl support in nginx

--- a/nginx/localhost.conf
+++ b/nginx/localhost.conf
@@ -90,7 +90,9 @@ http {
 	server {
 		listen       localhost:8082;
 		server_name  localhost:8082;
-
+                ssl on;
+	        ssl_certificate /home/harsh/nginx_certificates/server.crt;
+	        ssl_certificate_key /home/harsh/nginx_certificates/server.key;
 
 		location / {
 			
