Nginx + spring = works!

--- a/nginx/jacksparrow.conf
+++ b/nginx/jacksparrow.conf
@@ -21,10 +21,10 @@ http {
 	gzip_comp_level 6;
 	gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
 
-    #upstream api {
-	#	server      http://localhost:8081;
-	#	server      http://localhost:8082;
-    #}
+    upstream api {
+		server      localhost:8081;
+		server      localhost:8082;
+    }
 
 	server {
 		listen       localhost:8080;
@@ -47,11 +47,11 @@ log_subrequest on;
         }
 
         location ^~ /api {
-            expires 30d;
-#            #proxy_pass          api;
-#			proxy_redirect     off;
-#			client_max_body_size       0;
-            return 404;
+            rewrite ^/api(.*)$ $1 break;
+            expires     off;
+            proxy_pass              http://api;
+			proxy_redirect          off;
+			client_max_body_size    0;
         }
 
         location ^~ /.+/.+ {
@@ -65,7 +65,11 @@ log_subrequest on;
         }
 
         location / {
-            index   html/index.html;
+            set $base 'unknownUser';
+            if ($cookie_API-ACT) {
+                set $base 'index';
+            }
+            index   html/$base.html;
         }
 
 	}
