Fix issues with caching.

--- a/nginx/jacksparrow.conf
+++ b/nginx/jacksparrow.conf
@@ -29,10 +29,12 @@ http {
 	server {
 		listen       localhost:8080;
 		server_name  localhost:8080;
-error_log log/dbg.log info;
-log_subrequest on;
+
+        # error_log log/dbg.log debug;
+        # log_subrequest on;
+
         root    www/;
-        expires 30d;
+        expires     max;
 
 #                ssl on;
 #	        ssl_certificate /home/harsh/nginx_certificates/server.crt;
@@ -46,30 +48,29 @@ log_subrequest on;
  		location ^~ /html {
         }
 
+        location ^~ /login {
+            try_files  /html/unknownUser.html =404;
+        }
+
         location ^~ /api {
+            expires off;
+
             rewrite ^/api(.*)$ $1 break;
-            expires     off;
             proxy_pass              http://api;
 			proxy_redirect          off;
 			client_max_body_size    0;
         }
 
-        location ^~ /.+/.+ {
-            rewrite ^.*$ / break;
-            index html/post.html;
+        location ~ ^/.+/.+$ {
+            try_files  /html/post.html =404;
         }
 
-        location ~ /.+ {
-            rewrite ^.*$ / break;
-            index html/user.html;
+        location ~ ^/[^/].+$ {
+            try_files  /html/user.html =404;
         }
 
         location / {
-            set $base 'unknownUser';
-            if ($cookie_API-ACT) {
-                set $base 'index';
-            }
-            index   html/$base.html;
+            index   html/index.html;
         }
 
 	}
