Served over SSL.

--- a/nginx/jacksparrow.conf
+++ b/nginx/jacksparrow.conf
@@ -37,10 +37,9 @@ http {
         root    www/;
         expires     max;
 
-#                ssl on;
-#	        ssl_certificate /home/harsh/nginx_certificates/server.crt;
-#	        ssl_certificate_key /home/harsh/nginx_certificates/server.key;
-#
+        ssl on;
+        ssl_certificate server.crt;
+        ssl_certificate_key server.key;
 
 
  		location ^~ /static {
